In progress: Displaying customer list

--- a/web/src/main/java/log4j2.properties
+++ b/web/src/main/java/log4j2.properties
@@ -1,17 +1,33 @@
-### direct log messages to stdout ###
-appender.console.type = Console
-appender.console.name = STDOUT
-appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %highlight{[%p]} %r [%t] %c:%L %m%n
+#### direct log messages to stdout ###
+#appender.console.type = Console
+#appender.console.name = STDOUT
+#appender.console.layout.type = PatternLayout
+#appender.console.layout.pattern = %highlight{[%p]} %r [%t] %c:%L %m%n
+#
+#### set log levels - for more verbose logging change 'info' to 'debug' ###
+#rootLogger.level = INFO
+#rootLogger.appenderRef.stdout.ref = STDOUT
+#
+#
+#
+#### log all activity
+#logger.learna.name = mks.myworkspace.crm
+#logger.learna.level = DEBUG
+#logger.learna.additivity=false
+#logger.learna.appenderRef.console.ref = STDOUT
 
-### set log levels - for more verbose logging change 'info' to 'debug' ###
-rootLogger.level = INFO
-rootLogger.appenderRef.stdout.ref = STDOUT
+# Root logger option
+log4j.rootLogger=DEBUG, file, stdout
 
+# Log to console
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
-
-### log all activity
-logger.learna.name = mks.myworkspace.crm
-logger.learna.level = DEBUG
-logger.learna.additivity=false
-logger.learna.appenderRef.console.ref = STDOUT
+# Log to file
+log4j.appender.file=org.apache.log4j.RollingFileAppender
+log4j.appender.file.File=D:\logs\application.log
+log4j.appender.file.MaxFileSize=5MB
+log4j.appender.file.MaxBackupIndex=10
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
