--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,8 @@
   <modules>
     <module>api</module>
 	<module>common</module>
+	<module>biz</module>
+	<module>jpa</module>
     <module>impl</module>
     <module>pack</module>
 	<module>controller</module>
