--- a/biz/pom.xml
+++ b/biz/pom.xml
@@ -12,6 +12,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>mks.myworkspace.crm</groupId>
+			<artifactId>crm-jpa</artifactId>
+			<version>${module.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
