--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -1,3 +1,15 @@
 # For CAS Authentication
 logoutUrl=http://localhost:7070/cas/logout?service=http://localhost:8080/yourapp
 theme.root=http://mks.com.vn/themes/robust-admin/
+
+driverClassName@javax.sql.BaseDataSource=org.mariadb.jdbc.Driver
+#url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/sakai23?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
+url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/crm?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
+username@javax.sql.BaseDataSource=crm_user
+password@javax.sql.BaseDataSource=Crm@123
+hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+auto.ddl=true
+hibernate.show_sql=false
+hibernate.hbm2ddl.auto=update
+validationQuery@javax.sql.BaseDataSource=select 1 from INFORMATION_SCHEMA.SYSTEM_USERS
