--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -34,6 +34,13 @@
             <artifactId>crm-impl</artifactId>
 <!--             <version>${module.version}</version> -->
         </dependency>
+        
+        <dependency>
+            <groupId>mks.myworkspace.crm</groupId>
+            <artifactId>crm-jpa</artifactId>
+            <version>${module.version}</version>
+        </dependency>
+        
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -75,7 +82,7 @@
       <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
-        <version>4.0.1</version>
+<!--        <version>4.0.1</version>-->
 <!--         <scope>provided</scope> -->
       </dependency>
 <!--         <dependency> -->
@@ -95,12 +102,32 @@
             <artifactId>sakai-kernel-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        
 		<dependency>
             <groupId>org.sakaiproject.kernel</groupId>
             <artifactId>sakai-component-manager</artifactId>
         </dependency>
-
-
+        
+        <!-- Support JPA -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons</artifactId>
+			<version>${spring.data.jpa.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>${spring.data.jpa.version}</version>
+		</dependency>
+		
+		<!-- JPA API -->
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>javax.persistence-api</artifactId>
+			<version>2.2</version> <!-- Example version -->
+		</dependency>
+		
+		
 	</dependencies>
 	<build>
 		<!-- configure the build to use the standard maven structure -->
