Add customer to customer list successfully! Yeahhhhh

--- a/web/src/main/resources/log4j2.properties
+++ b/web/src/main/resources/log4j2.properties
@@ -32,3 +32,10 @@ logger.myworkspace.level = DEBUG
 logger.myworkspace.additivity = false
 logger.myworkspace.appenderRefs = stdout
 logger.myworkspace.appenderRef.stdout.ref = STDOUT
+
+# Transaction logging
+logger.transaction.name = org.springframework.transaction
+logger.transaction.level = DEBUG
+logger.transaction.additivity = false
+logger.transaction.appenderRefs = stdout
+logger.transaction.appenderRef.stdout.ref = STDOUT
