--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -7,9 +7,11 @@ driverClassName@javax.sql.BaseDataSource=org.mariadb.jdbc.Driver
 url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/crm?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
 username@javax.sql.BaseDataSource=crm_user
 password@javax.sql.BaseDataSource=Crm@123
+#username@javax.sql.BaseDataSource=root
+#password@javax.sql.BaseDataSource=Ngan@1023
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 auto.ddl=true
-hibernate.show_sql=false
+hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
 validationQuery@javax.sql.BaseDataSource=select 1 from INFORMATION_SCHEMA.SYSTEM_USERS
