--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -7,7 +7,8 @@ driverClassName@javax.sql.BaseDataSource=org.mariadb.jdbc.Driver
 url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/crm?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
 username@javax.sql.BaseDataSource=crm_user
 password@javax.sql.BaseDataSource=Crm@123
-hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
+#hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 auto.ddl=true
 hibernate.show_sql=false
