--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -7,40 +8,40 @@
 		<groupId>mks.myworkspace.crm</groupId>
 		<version>23.2</version>
 	</parent>
-<!-- 	<groupId>mks.myworkspace.crm</groupId> -->
+	<!-- 	<groupId>mks.myworkspace.crm</groupId> -->
 	<artifactId>crm-controller</artifactId>
-    <packaging>jar</packaging>
+	<packaging>jar</packaging>
 
 
 	<dependencies>
-	    <!-- sub project dependencies -->
-        <dependency>
-            <groupId>mks.myworkspace.crm</groupId>
-            <artifactId>crm-api</artifactId>
-<!--             <version>${module.version}</version> -->
-        </dependency>
+		<!-- sub project dependencies -->
 		<dependency>
-            <groupId>mks.myworkspace.crm</groupId>
-            <artifactId>crm-common</artifactId>
-            <version>${module.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>mks.myworkspace.crm</groupId>
-            <artifactId>crm-biz</artifactId>
-            <version>${module.version}</version>
-        </dependency>
+			<groupId>mks.myworkspace.crm</groupId>
+			<artifactId>crm-api</artifactId>
+			<!--             <version>${module.version}</version> -->
+		</dependency>
 		<dependency>
-            <groupId>mks.myworkspace.crm</groupId>
-            <artifactId>crm-impl</artifactId>
-<!--             <version>${module.version}</version> -->
-        </dependency>
-        
-        <dependency>
-            <groupId>mks.myworkspace.crm</groupId>
-            <artifactId>crm-jpa</artifactId>
-            <version>${module.version}</version>
-        </dependency>
-        
+			<groupId>mks.myworkspace.crm</groupId>
+			<artifactId>crm-common</artifactId>
+			<version>${module.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>mks.myworkspace.crm</groupId>
+			<artifactId>crm-biz</artifactId>
+			<version>${module.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>mks.myworkspace.crm</groupId>
+			<artifactId>crm-impl</artifactId>
+			<!--             <version>${module.version}</version> -->
+		</dependency>
+
+		<dependency>
+			<groupId>mks.myworkspace.crm</groupId>
+			<artifactId>crm-jpa</artifactId>
+			<version>${module.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -48,67 +49,67 @@
 
 		<!-- spring libraries -->
 		<dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-        </dependency>
-		
-		<!-- Gson -->
-<!--         <dependency> -->
-<!--             <groupId>com.google.code.gson</groupId> -->
-<!--             <artifactId>gson</artifactId> -->
-<!--             <version>2.2.2</version> -->
-<!--             <scope>compile</scope> -->
-<!--         </dependency> -->
-
-        <!-- Servlet -->
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-<!--        <version>4.0.1</version>-->
-<!--         <scope>provided</scope> -->
-      </dependency>
-<!--         <dependency> -->
-<!--             <groupId>javax.servlet.jsp</groupId> -->
-<!--             <artifactId>jsp-api</artifactId> -->
-<!--             <scope>provided</scope> -->
-<!--         </dependency> -->
-<!--         <dependency> -->
-<!--             <groupId>javax.servlet</groupId> -->
-<!--             <artifactId>jstl</artifactId> -->
-<!--             <version>1.2</version> -->
-<!--         </dependency> -->
-		
-		<!-- Sakai dependencies -->
-        <dependency>
-            <groupId>org.sakaiproject.kernel</groupId>
-            <artifactId>sakai-kernel-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+		</dependency>
 		<dependency>
-            <groupId>org.sakaiproject.kernel</groupId>
-            <artifactId>sakai-component-manager</artifactId>
-        </dependency>
-        
-        <!-- Support JPA -->
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+		</dependency>
+
+		<!-- Gson -->
+		<!--         <dependency> -->
+		<!--             <groupId>com.google.code.gson</groupId> -->
+		<!--             <artifactId>gson</artifactId> -->
+		<!--             <version>2.2.2</version> -->
+		<!--             <scope>compile</scope> -->
+		<!--         </dependency> -->
+
+		<!-- Servlet -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<!--        <version>4.0.1</version>-->
+			<!--         <scope>provided</scope> -->
+		</dependency>
+		<!--         <dependency> -->
+		<!--             <groupId>javax.servlet.jsp</groupId> -->
+		<!--             <artifactId>jsp-api</artifactId> -->
+		<!--             <scope>provided</scope> -->
+		<!--         </dependency> -->
+		<!--         <dependency> -->
+		<!--             <groupId>javax.servlet</groupId> -->
+		<!--             <artifactId>jstl</artifactId> -->
+		<!--             <version>1.2</version> -->
+		<!--         </dependency> -->
+
+		<!-- Sakai dependencies -->
+		<dependency>
+			<groupId>org.sakaiproject.kernel</groupId>
+			<artifactId>sakai-kernel-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.sakaiproject.kernel</groupId>
+			<artifactId>sakai-component-manager</artifactId>
+		</dependency>
+
+		<!-- Support JPA -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-commons</artifactId>
@@ -119,15 +120,20 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>${spring.data.jpa.version}</version>
 		</dependency>
-		
+
 		<!-- JPA API -->
 		<dependency>
 			<groupId>javax.persistence</groupId>
 			<artifactId>javax.persistence-api</artifactId>
 			<version>2.2</version> <!-- Example version -->
 		</dependency>
-		
-		
+
+
+		<dependency>
+			<groupId>mks.mws.tool.workingtime</groupId>
+			<artifactId>workingtime-biz</artifactId>
+			<version>23.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<!-- configure the build to use the standard maven structure -->
