--- a/web/src/main/resources/log4j2.properties
+++ b/web/src/main/resources/log4j2.properties
@@ -39,3 +39,27 @@ logger.transaction.level = DEBUG
 logger.transaction.additivity = false
 logger.transaction.appenderRefs = stdout
 logger.transaction.appenderRef.stdout.ref = STDOUT
+
+# Logging for JPA and Hibernate
+logger.jpa.name = org.hibernate
+logger.jpa.level = DEBUG
+logger.jpa.additivity = false
+logger.jpa.appenderRefs = stdout, file
+logger.jpa.appenderRef.stdout.ref = STDOUT
+logger.jpa.appenderRef.file.ref = FileLogger
+
+# Logging for JDBC
+logger.jdbc.name = org.springframework.jdbc
+logger.jdbc.level = DEBUG
+logger.jdbc.additivity = false
+logger.jdbc.appenderRefs = stdout, file
+logger.jdbc.appenderRef.stdout.ref = STDOUT
+logger.jdbc.appenderRef.file.ref = FileLogger
+
+# Logging for Errors and Exceptions
+logger.errors.name = mks.myworkspace.crm.errors
+logger.errors.level = ERROR
+logger.errors.additivity = false
+logger.errors.appenderRefs = stdout, file
+logger.errors.appenderRef.stdout.ref = STDOUT
+logger.errors.appenderRef.file.ref = FileLogger
