--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>mks.myworkspace.crm</groupId>
 			<artifactId>crm-common</artifactId>
-			<version>${module.version}</version>
+			<version>23.2</version>
 		</dependency>
 		<dependency>
 			<groupId>mks.myworkspace.crm</groupId>
