--- a/web/pom.xml
+++ b/web/pom.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-<!--	<parent>-->
-<!--		<artifactId>crm</artifactId>-->
-<!--		<groupId>mks.myworkspace.crm</groupId>-->
-<!--		<version>23.2</version>-->
-<!--	</parent>-->
+	<!--	<parent>-->
+	<!--		<artifactId>crm</artifactId>-->
+	<!--		<groupId>mks.myworkspace.crm</groupId>-->
+	<!--		<version>23.2</version>-->
+	<!--	</parent>-->
 	<!-- Comments parent tag to run the web standalone -->
 	<groupId>mks.myworkspace.crm</groupId>
 	<artifactId>crm-web</artifactId>
@@ -14,22 +16,22 @@
 	<packaging>war</packaging>
 
 	<properties>
-        <sakai.kernel.version>23.2</sakai.kernel.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>5.3.27</spring.version>
-        <spring.security.version>5.5.7</spring.security.version>
-        <module.version>23.2</module.version>
-        <thymeleaf.version>3.0.15.RELEASE</thymeleaf.version>
-        <sakai.hibernate.version>5.6.15.Final</sakai.hibernate.version>
-        <sakai.commons-io.version>2.13.0</sakai.commons-io.version>
-        <spring.data.jpa.version>2.5.3</spring.data.jpa.version>
-        <sakai.commons.fileupload.version>1.5</sakai.commons.fileupload.version>
-        <sakai.jackson.version>2.14.1</sakai.jackson.version>
-        <sakai.jstl.version>1.2</sakai.jstl.version>
+		<sakai.kernel.version>23.2</sakai.kernel.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring.version>5.3.27</spring.version>
+		<spring.security.version>5.5.7</spring.security.version>
+		<module.version>23.2</module.version>
+		<thymeleaf.version>3.0.15.RELEASE</thymeleaf.version>
+		<sakai.hibernate.version>5.6.15.Final</sakai.hibernate.version>
+		<sakai.commons-io.version>2.13.0</sakai.commons-io.version>
+		<spring.data.jpa.version>2.5.3</spring.data.jpa.version>
+		<sakai.commons.fileupload.version>1.5</sakai.commons.fileupload.version>
+		<sakai.jackson.version>2.14.1</sakai.jackson.version>
+		<sakai.jstl.version>1.2</sakai.jstl.version>
 		<!-- More -->
-        <sakai.log4j.version>2.20.0</sakai.log4j.version>
-        <sakai.slf4j.version>1.7.36</sakai.slf4j.version>
-        <sakai.poi.version>5.2.3</sakai.poi.version>
+		<sakai.log4j.version>2.20.0</sakai.log4j.version>
+		<sakai.slf4j.version>1.7.36</sakai.slf4j.version>
+		<sakai.poi.version>5.2.3</sakai.poi.version>
 	</properties>
 
 	<dependencies>
@@ -250,6 +252,12 @@
 			<artifactId>mariadb-java-client</artifactId>
 			<version>3.4.0</version>
 			<!--		    <version>2.7.4</version>-->
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.15.2</version> <!-- Sử dụng phiên bản mới nhất -->
 		</dependency>
 	</dependencies>
 
