View List of Orders using Datatable

--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -17,3 +17,6 @@ auto.ddl=true
 hibernate.show_sql=false
 hibernate.hbm2ddl.auto=update
 validationQuery@javax.sql.BaseDataSource=select 1 from INFORMATION_SCHEMA.SYSTEM_USERS
+
+productList.colHeaders=ID, Ma don hang, Ngay giao, Loai hang hoa, Thong tin nguoi gui, Phuong tien van chuyen, Thao tac
+productList.colWidths=10, 100, 100, 150, 200, 100, 150
