--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -4,12 +4,13 @@ theme.root=http://mks.com.vn/themes/robust-admin/
 
 driverClassName@javax.sql.BaseDataSource=org.mariadb.jdbc.Driver
 #url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/sakai23?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
-url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/crm?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
-username@javax.sql.BaseDataSource=crm_user
-password@javax.sql.BaseDataSource=Crm@123
+#url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/crm?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
+#username@javax.sql.BaseDataSource=crm_user
+#password@javax.sql.BaseDataSource=Crm@123
 
-#username@javax.sql.BaseDataSource=root
-#password@javax.sql.BaseDataSource=Ngan@1023
+url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/crm_old_v1?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
+username@javax.sql.BaseDataSource=root
+password@javax.sql.BaseDataSource=Ngan@1023
 hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 #hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
