Feat (UI only): add new customer via dedicated page instead of modal

--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -10,7 +10,7 @@ password@javax.sql.BaseDataSource=Crm@123
 
 #url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/crm_old_v1?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
 #username@javax.sql.BaseDataSource=root
-#password@javax.sql.BaseDataSource=Ngan@1023
+#password@javax.sql.BaseDataSource=Thanh@2993
 hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 #hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
