--- a/api/pom.xml
+++ b/api/pom.xml
@@ -32,6 +32,11 @@
 			<groupId>org.sakaiproject.kernel</groupId>
 			<artifactId>sakai-kernel-api</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.codehaus.plexus</groupId>
+		    <artifactId>plexus-archiver</artifactId>
+		    <version>4.4.0</version> <!-- Kiểm tra và sử dụng phiên bản phù hợp nếu cần -->
+		</dependency>
 
 
 	</dependencies>
@@ -39,4 +44,5 @@
 		<!-- configure the build to use the standard maven structure -->
 		<sourceDirectory>src/main/java</sourceDirectory>
 	</build>
+
 </project>
