--- a/common/pom.xml
+++ b/common/pom.xml
@@ -15,11 +15,11 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>mksgroup.java</groupId>
 			<artifactId>javacommon</artifactId>
 			<version>0.7.3</version>
-		</dependency>
+		</dependency>-->
 	</dependencies>
 	<build>
 		<!-- configure the build to use the standard maven structure -->
