--- a/common/pom.xml
+++ b/common/pom.xml
@@ -20,9 +20,16 @@
 			<artifactId>javacommon</artifactId>
 			<version>0.7.3</version>
 		</dependency>
+		<dependency>
+        <groupId>org.apache.ant</groupId>
+        <artifactId>ant</artifactId>
+        <version>1.10.13</version> <!-- Kiểm tra phiên bản mới nhất -->
+    </dependency>
 	</dependencies>
 	<build>
 		<!-- configure the build to use the standard maven structure -->
+    
+
 		<sourceDirectory>src/main/java</sourceDirectory>
 	</build>
 </project>
