--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -18,6 +18,7 @@
 		<dependency>
 			<groupId>mks.myworkspace.crm</groupId>
 			<artifactId>crm-api</artifactId>
+			<version>23.2</version>
 		</dependency>
 		<dependency>
 			<groupId>mks.myworkspace.crm</groupId>
