--- a/api/pom.xml
+++ b/api/pom.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>crm</artifactId>
 		<groupId>mks.myworkspace.crm</groupId>
 		<version>23.2</version>
-        <relativePath>../pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
-<!-- 	<groupId>mks.myworkspace.crm</groupId> -->
+	<!-- 	<groupId>mks.myworkspace.crm</groupId> -->
 	<artifactId>crm-api</artifactId>
 
 	<properties>
@@ -25,7 +26,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-		
+
 		</dependency>
 
 		<!-- Sakai dependencies -->
@@ -34,9 +35,10 @@
 			<artifactId>sakai-kernel-api</artifactId>
 		</dependency>
 		<dependency>
-		    <groupId>org.codehaus.plexus</groupId>
-		    <artifactId>plexus-archiver</artifactId>
-		    <version>4.4.0</version> <!-- Kiểm tra và sử dụng phiên bản phù hợp nếu cần -->
+			<groupId>org.codehaus.plexus</groupId>
+			<artifactId>plexus-archiver</artifactId>
+			<version>4.4.0</version> <!-- Kiểm tra và sử dụng phiên bản phù hợp
+			nếu cần -->
 		</dependency>
 
 
