--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>crm</artifactId>
 		<groupId>mks.myworkspace.crm</groupId>
 		<version>23.2</version>
-        <relativePath>../pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
-<!-- 	<groupId>mks.myworkspace.crm</groupId> -->
+	<!-- 	<groupId>mks.myworkspace.crm</groupId> -->
 	<artifactId>crm-impl</artifactId>
 	<packaging>jar</packaging>
 	<dependencies>
-        <dependency>
-            <groupId>mks.myworkspace.crm</groupId>
-            <artifactId>crm-common</artifactId>
-            <version>${module.version}</version>
-        </dependency>
+		<dependency>
+			<groupId>mks.myworkspace.crm</groupId>
+			<artifactId>crm-common</artifactId>
+			<version>${module.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>mks.myworkspace.crm</groupId>
 			<artifactId>crm-api</artifactId>
@@ -25,24 +26,24 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		</dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-commons</artifactId>
-            <version>${spring.data.commons.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-jpa</artifactId>
-            <version>${spring.data.jpa.version}</version>
-        </dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons</artifactId>
+			<version>${spring.data.commons.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>${spring.data.jpa.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
@@ -69,14 +70,14 @@
 			<groupId>org.sakaiproject.kernel</groupId>
 			<artifactId>sakai-component-manager</artifactId>
 		</dependency>
-        <dependency>
-            <groupId>org.sakaiproject.sitemanage</groupId>
-            <artifactId>sakai-site-manage-util</artifactId>
-        </dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.sakaiproject.kernel</groupId>-->
-<!--			<artifactId>sakai-kernel-util</artifactId>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.sakaiproject.sitemanage</groupId>
+			<artifactId>sakai-site-manage-util</artifactId>
+		</dependency>
+		<!--		<dependency>-->
+		<!--			<groupId>org.sakaiproject.kernel</groupId>-->
+		<!--			<artifactId>sakai-kernel-util</artifactId>-->
+		<!--		</dependency>-->
 
 	</dependencies>
 	<build>
