--- a/pack/pom.xml
+++ b/pack/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -7,7 +8,7 @@
 		<groupId>mks.myworkspace.crm</groupId>
 		<version>23.2</version>
 	</parent>
-<!-- 	<groupId>mks.myworkspace.crm</groupId> -->
+	<!-- 	<groupId>mks.myworkspace.crm</groupId> -->
 	<artifactId>crm-pack</artifactId>
 
 	<packaging>sakai-component</packaging>
@@ -21,12 +22,12 @@
 		<dependency>
 			<groupId>mks.myworkspace.crm</groupId>
 			<artifactId>crm-impl</artifactId>
- 			<exclusions>
+			<exclusions>
 				<exclusion>
 					<groupId>mks.myworkspace.crm</groupId>
 					<artifactId>crm-api</artifactId>
 				</exclusion>
-            </exclusions>
+			</exclusions>
 		</dependency>
 	</dependencies>
 	<build>
