--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>mks.myworkspace.crm</groupId>
@@ -9,13 +10,13 @@
 	<name>sakai-spring-maven-archetype</name>
 	<description>Archetype to generate a project with sakai and spring</description>
 
-    <!-- Place the source of this project with Sakai 19.3's source -->
-    <parent>
-        <groupId>org.sakaiproject</groupId>
-        <artifactId>master</artifactId>
-        <version>23.2</version>
-        <relativePath>../master/pom.xml</relativePath>
-    </parent>
+	<!-- Place the source of this project with Sakai 19.3's source -->
+	<parent>
+		<groupId>org.sakaiproject</groupId>
+		<artifactId>master</artifactId>
+		<version>23.2</version>
+		<relativePath>../master/pom.xml</relativePath>
+	</parent>
 
 	<dependencyManagement>
 		<dependencies>
@@ -37,19 +38,19 @@
 		</dependencies>
 	</dependencyManagement>
 	<properties>
-        <sakai.kernel.version>23.2</sakai.kernel.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>5.3.27</spring.version>
-        <spring.security.version>5.5.7</spring.security.version>
-        <spring.data.commons.version>2.5.3</spring.data.commons.version>
-        <spring.data.jpa.version>2.5.3</spring.data.jpa.version>
-        <module.version>23.2</module.version>
-        <thymeleaf.version>3.0.15.RELEASE</thymeleaf.version>
-        
-        <!-- More -->
-        <sakai.log4j.version>2.20.0</sakai.log4j.version>
-        <sakai.slf4j.version>1.7.36</sakai.slf4j.version>
-        <sakai.poi.version>5.2.3</sakai.poi.version>
+		<sakai.kernel.version>23.2</sakai.kernel.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring.version>5.3.27</spring.version>
+		<spring.security.version>5.5.7</spring.security.version>
+		<spring.data.commons.version>2.5.3</spring.data.commons.version>
+		<spring.data.jpa.version>2.5.3</spring.data.jpa.version>
+		<module.version>23.2</module.version>
+		<thymeleaf.version>3.0.15.RELEASE</thymeleaf.version>
+
+		<!-- More -->
+		<sakai.log4j.version>2.20.0</sakai.log4j.version>
+		<sakai.slf4j.version>1.7.36</sakai.slf4j.version>
+		<sakai.poi.version>5.2.3</sakai.poi.version>
 	</properties>
 
 	<repositories>
@@ -79,16 +80,16 @@
 	</pluginRepositories>
 
 
-  <modules>
-    <module>api</module>
-	<module>common</module>
-	<module>biz</module>
-	<module>jpa</module>
-    <module>impl</module>
-    <module>pack</module>
-	<module>controller</module>
-	<module>tool</module>
-	<module>web</module>
-  </modules>
-  
+	<modules>
+		<module>api</module>
+		<module>common</module>
+		<module>biz</module>
+		<module>jpa</module>
+		<module>impl</module>
+		<module>pack</module>
+		<module>controller</module>
+		<module>tool</module>
+		<module>web</module>
+	</modules>
+
 </project>
