--- a/tool/pom.xml
+++ b/tool/pom.xml
@@ -1,42 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>crm</artifactId>
 		<groupId>mks.myworkspace.crm</groupId>
 		<version>23.2</version>
-        <relativePath>../pom.xml</relativePath>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>mks.myworkspace.crm</groupId>
 	<artifactId>crm-tool</artifactId>
-<!-- 	<version>23.2</version> -->
+	<!-- 	<version>23.2</version> -->
 	<packaging>war</packaging>
 
 	<dependencies>
-         <dependency>
-            <groupId>mks.myworkspace.crm</groupId>
-            <artifactId>crm-common</artifactId>
-            <version>${module.version}</version>
-        </dependency>
+		<dependency>
+			<groupId>mks.myworkspace.crm</groupId>
+			<artifactId>crm-common</artifactId>
+			<version>${module.version}</version>
+		</dependency>
 
-        <dependency>
-            <groupId>mks.myworkspace.crm</groupId>
-            <artifactId>crm-controller</artifactId>
-            <version>${module.version}</version>
-            <exclusions>
+		<dependency>
+			<groupId>mks.myworkspace.crm</groupId>
+			<artifactId>crm-controller</artifactId>
+			<version>${module.version}</version>
+			<exclusions>
 				<exclusion>
 					<groupId>mks.myworkspace.crm</groupId>
-            		<artifactId>crm-api</artifactId>
+					<artifactId>crm-api</artifactId>
 				</exclusion>
 				<exclusion>
 					<groupId>mks.myworkspace.crm</groupId>
-            		<artifactId>crm-impl</artifactId>
+					<artifactId>crm-impl</artifactId>
 				</exclusion>
-            </exclusions>
-        </dependency>
+			</exclusions>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId> 
+			<artifactId>spring-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -47,10 +49,10 @@
 			<artifactId>spring-webmvc</artifactId>
 		</dependency>
 
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring4 -->
 		<dependency>
@@ -59,29 +61,29 @@
 			<version>${thymeleaf.version}</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.thymeleaf</groupId>
-		    <artifactId>thymeleaf-spring5</artifactId>
-		    <version>${thymeleaf.version}</version>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring5</artifactId>
+			<version>${thymeleaf.version}</version>
 		</dependency>
-<!--         <dependency> -->
-<!--             <groupId>com.google.code.gson</groupId> -->
-<!--             <artifactId>gson</artifactId> -->
-<!--             <version>2.7</version> -->
-<!--         </dependency> -->
-        
-        <!-- Jackson JSON Mapper -->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-<!--             <version>2.6.6</version> -->
-        </dependency>
-		
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-<!--         <version>4.0.1</version> -->
-<!--         <scope>provided</scope> -->
-      </dependency>
+		<!--         <dependency> -->
+		<!--             <groupId>com.google.code.gson</groupId> -->
+		<!--             <artifactId>gson</artifactId> -->
+		<!--             <version>2.7</version> -->
+		<!--         </dependency> -->
+
+		<!-- Jackson JSON Mapper -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<!--             <version>2.6.6</version> -->
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<!--         <version>4.0.1</version> -->
+			<!--         <scope>provided</scope> -->
+		</dependency>
 
 
 		<dependency>
@@ -108,7 +110,8 @@
 			</resource>
 		</resources>
 		<plugins>
-			<!-- configure the war plugin to correctly use the standard maven structure -->
+			<!-- configure the war plugin to correctly use the standard maven
+			structure -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
