--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -119,6 +119,13 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>${spring.data.jpa.version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>javax.enterprise</groupId>
+		    <artifactId>cdi-api</artifactId>
+		    <version>2.0</version>
+		    <scope>provided</scope>
+		</dependency>
+
 
 		<!-- JPA API -->
 		<!--		<dependency>-->
