--- a/biz/pom.xml
+++ b/biz/pom.xml
@@ -63,6 +63,14 @@
 			<artifactId>json</artifactId>
 			<version>20210307</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>5.5.7</version> <!-- Kiểm tra phiên bản để sử dụng phiên bản
+			mới nhất -->
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<!-- configure the build to use the standard maven structure -->
