Update Login using CAS (gần thành công, chưa load dc username lên)

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -9,23 +9,22 @@
 	</listener>
 
 	<!-- Spring Security Configuration -->
-	<!-- 	<filter> -->
-	<!-- 		<filter-name>springSecurityFilterChain</filter-name> -->
-	<!--
-	<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class> -->
-	<!-- 	</filter> -->
-	<!-- 	<filter-mapping> -->
-	<!-- 		<filter-name>springSecurityFilterChain</filter-name> -->
-	<!-- 		<url-pattern>/*</url-pattern> -->
-	<!-- 	</filter-mapping> -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 
 	<!-- Uncomment this for CAS authentication -->
 	<!-- Cas authentication.START -->
-	<!--     <listener> -->
-	<!--
-	<listener-class>org.jasig.cas.client.session.SingleSignOutHttpSessionListener</listener-class> -->
-	<!--     </listener>     -->
+	<listener>
+		<listener-class>org.jasig.cas.client.session.SingleSignOutHttpSessionListener</listener-class>
+	</listener>
 	<!-- Cas authentication.END -->
 
 	<filter>
