--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -126,7 +126,24 @@
 		<!--			<artifactId>javax.persistence-api</artifactId>-->
 		<!--			<version>2.2</version>  Example version -->
 		<!--		</dependency>-->
-
+	
+		<dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>5.5.7</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>5.5.7</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>5.5.7</version>
+        </dependency>
 
 	</dependencies>
 	<build>
