--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -1,5 +1,5 @@
 # For CAS Authentication
-logintUrl=https://myworkspace.vn/cas/login?service\=http://localhost:8080/crm-web/j_spring_cas_security_check
+loginUrl=https://myworkspace.vn/cas/login?service\=http://localhost:8080/crm-web/j_spring_cas_security_check
 logoutUrl=https://myworkspace.vn/cas/logout?service\=http://localhost:8080/crm-web
 #theme.root=http://mks.com.vn/themes/robust-admin/
 
