--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -1,6 +1,7 @@
 # For CAS Authentication
-logoutUrl=http://localhost:7070/cas/logout?service=http://localhost:8080/yourapp
-theme.root=http://mks.com.vn/themes/robust-admin/
+loginUrl=https://myworkspace.vn/cas/login?service\=http://localhost:8080/crm-web/j_spring_cas_security_check
+logoutUrl=https://myworkspace.vn/cas/logout?service\=http://localhost:8080/crm-web
+#theme.root=http://mks.com.vn/themes/robust-admin/
 
 driverClassName@javax.sql.BaseDataSource=org.mariadb.jdbc.Driver
 #url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/sakai23?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
