In progress updating customer detail and adding function send email (not complete yet).

--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -1,7 +1,7 @@
 # For CAS Authentication
 loginUrl=https://myworkspace.vn/cas/login?service\=http://localhost:8080/crm-web/j_spring_cas_security_check
-#logoutUrl=https://myworkspace.vn/cas/logout?service\=http://localhost:8080/crm-web
-logoutUrl=https://myworkspace.vn/cas/logout?service\=http://localhost:8080/crm-web/members
+logoutUrl=https://myworkspace.vn/cas/logout?service\=http://localhost:8080/crm-web
+#logoutUrl=https://myworkspace.vn/cas/logout?service\=http://localhost:8080/crm-web/members
 #theme.root=http://mks.com.vn/themes/robust-admin/
 
 driverClassName@javax.sql.BaseDataSource=org.mariadb.jdbc.Driver
@@ -23,8 +23,8 @@ validationQuery@javax.sql.BaseDataSource=select 1 from INFORMATION_SCHEMA.SYSTEM
 
 spring.web.resources.static-locations=classpath:/webapp/resources/
 #Neu mà login bang cas thì link dang xuat se lay giá tri caslogout.url lên de dang xuat
-#caslogout.url=https://myworkspace.vn/cas/logout?service=http://localhost:8080/crm-web
-caslogout.url=https://myworkspace.vn/cas/logout?service=http://localhost:8080/crm-web/members
+caslogout.url=https://myworkspace.vn/cas/logout?service=http://localhost:8080/crm-web
+#caslogout.url=https://myworkspace.vn/cas/logout?service=http://localhost:8080/crm-web/members
 #spring.security.enable-csrf=false
 
 # Mail Configuration
