Send email to customer and save to database successfully (fix characters' error related to Vietnamese completetly)

--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -34,6 +34,7 @@ spring.mail.username=crm.mekongsolution@gmail.com
 spring.mail.password=exfc mvlv ltbp qyfc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
 
 
 productList.colHeaders=ID, Ma don hang, Ngay giao, Loai hang hoa, Thong tin nguoi gui, Phuong tien van chuyen, Thao tac
