In progress fetching data of customer care on Customer Care Table but not successful

--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -36,6 +36,10 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 
+logging.level.root=INFO
+logging.level.com.yourpackage=DEBUG
+
+
 
 productList.colHeaders=ID, Ma don hang, Ngay giao, Loai hang hoa, Thong tin nguoi gui, Phuong tien van chuyen, Thao tac
 productList.colWidths=10, 100, 100, 100, 100, 100, 150
