Update chat assistant with new noftifications for each customer who needs care. But the data-type of createdAt is having problems, I'm fixing but not complete yet!

--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -6,7 +6,7 @@ logoutUrl=https://myworkspace.vn/cas/logout?service\=http://localhost:8080/crm-w
 
 driverClassName@javax.sql.BaseDataSource=org.mariadb.jdbc.Driver
 #url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/sakai23?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
-url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/crm?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
+url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/crm?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Ho_Chi_Minh"
 username@javax.sql.BaseDataSource=crm_user
 password@javax.sql.BaseDataSource=Crm@123
 
