--- a/web/pom.xml
+++ b/web/pom.xml
@@ -136,7 +136,7 @@
 			<artifactId>apacheds-server-jndi</artifactId>
 			<version>1.5.7</version>
 		</dependency>
-
+		
 		<!-- Use Tiles to apply GUI layout -->
 		<!--         <dependency> -->
 		<!--             <groupId>org.apache.tiles</groupId> -->
@@ -293,7 +293,17 @@
 		    <artifactId>jakarta.mail-api</artifactId>
 		    <version>2.1.3</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.15.2</version>
+		</dependency>
+		
 	</dependencies>
+	
+	
 
 	<build>
 		<!-- configure the build to use the standard maven structure -->
