Change create-drop into update.

--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -6,8 +6,12 @@ logoutUrl=https://myworkspace.vn/cas/logout?service\=http://localhost:8080/crm-w
 
 driverClassName@javax.sql.BaseDataSource=org.mariadb.jdbc.Driver
 #url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/sakai23?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
-url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/crm_test_v1?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Ho_Chi_Minh"
-username@javax.sql.BaseDataSource=crm_v1_user
+#url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/crm_test_v1?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Ho_Chi_Minh"
+#username@javax.sql.BaseDataSource=crm_v1_user
+#password@javax.sql.BaseDataSource=Crm@123
+
+url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/crm?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Ho_Chi_Minh"
+username@javax.sql.BaseDataSource=crm_user
 password@javax.sql.BaseDataSource=Crm@123
 
 #url@javax.sql.BaseDataSource=jdbc:mariadb://127.0.0.1:3306/crm_old_v1?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
@@ -19,7 +23,7 @@ hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 auto.ddl=true
 hibernate.show_sql=true
 #hibernate.hbm2ddl.auto=update
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=update
 validationQuery@javax.sql.BaseDataSource=select 1 from INFORMATION_SCHEMA.SYSTEM_USERS
 
 spring.web.resources.static-locations=classpath:/webapp/resources/
