Continue updating customer care (case KH tiem nang)

--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -45,11 +45,16 @@ spring.mail.default-encoding=UTF-8
 # Customer with mainStatus is MOI (To view on Customer Care Table and message)
 customer.care.days-ago-case1 = 2 
 
-# Maximum days to take care of customers with mainStatus is MOI
+# Maximum days to take care of customers with mainStatus is MOI and their interaction is null                                                                        
 customer.care.max-care-days = 2
+
+# Maximum days to take care of customers with mainStatus is TIEM NANG and                                                                    
+customer.care.max-care-days = 3
 
 #Customer with mainStatus is TIEM NANG (To view on Customer Care Table and message)
 customer.care.days-ago-case2 = 1
+
+
 
 logging.level.root=INFO
 logging.level.com.yourpackage=DEBUG
