Fix bugs udpating Tình trạng chăm sóc KH + sending and viewing email completely.

--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -35,8 +35,10 @@ caslogout.url=https://myworkspace.vn/cas/logout?service=http://localhost:8080/cr
 # Mail Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=crm.mekongsolution@gmail.com
-spring.mail.password=exfc mvlv ltbp qyfc
+#spring.mail.username=crm.mekongsolution@gmail.com
+#spring.mail.password=exfc mvlv ltbp qyfc
+spring.mail.username=crm.mekongsolution.email2@gmail.com
+spring.mail.password=xhgy jxvr vlrm pdgm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
@@ -46,10 +48,10 @@ spring.mail.default-encoding=UTF-8
 customer.care.days-ago-case1 = 2 
 
 # Maximum days to take care of customers with mainStatus is MOI and their interaction is null                                                                        
-customer.care.max-care-days = 2
+customer.care.max-care-days-new-case1 = 2
 
 # Maximum days to take care of customers with mainStatus is TIEM NANG and                                                                    
-customer.care.max-care-days = 3
+customer.care.max-care-days-potential-case1 = 3
 
 #Customer with mainStatus is TIEM NANG (To view on Customer Care Table and message)
 customer.care.days-ago-case2 = 1
