Update source code (phase 1)

--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -56,6 +56,10 @@ customer.care.max-care-days-potential-case1 = 3
 #Customer with mainStatus is TIEM NANG (To view on Customer Care Table and message)
 customer.care.days-ago-case2 = 1
 
+# Email birthday configuarion
+email.birthday.subject=CHUC MUNG SINH NHAT
+email.birthday.template=emailBirthdayTemplate1
+
 
 
 logging.level.root=INFO
