Fix code for testing.

--- a/jpa/pom.xml
+++ b/jpa/pom.xml
@@ -90,7 +90,18 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.9.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+		<!--		<dependency>-->
+		<!--			<groupId>org.apache.commons</groupId>-->
+		<!--			<artifactId>commons-dbcp2</artifactId>-->
+		<!--			<version>2.9.0</version>-->
+		<!--		</dependency>-->
 
 	</dependencies>
 	<build>
