In progress creating function tracking history of updating main status of customer.

--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -52,8 +52,8 @@ customer.care.days-ago-case2 = 1
 email.birthday.subject=CHUC MUNG SINH NHAT
 email.birthday.template=emailBirthdayTemplate1
 
-
-
+# Main-status = Moi, Tiem nang, Chot, Roi di, Quay lai
+customer.main-status = New,Potential,Converted,Leave,Back
 logging.level.root=INFO
 logging.level.com.yourpackage=DEBUG
 
