In progress creating reminders list configuation list.

--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -36,16 +36,16 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 
 # Customer Care Configuration
-# Customer with mainStatus is MOI (To view on Customer Care Table and message)
+# Customer with mainStatus is NEW (To view on Customer Care Table and message)
 customer.care.days-ago-case1 = 2 
 
-# Maximum days to take care of customers with mainStatus is MOI and their interaction is null                                                                        
+# Maximum days to take care of customers with mainStatus is NEW and their interaction is null                                                                        
 customer.care.max-care-days-new-case1 = 2
 
-# Maximum days to take care of customers with mainStatus is TIEM NANG and                                                                    
+# Maximum days to take care of customers with mainStatus is POTENTIAL and                                                                    
 customer.care.max-care-days-potential-case1 = 3
 
-#Customer with mainStatus is TIEM NANG (To view on Customer Care Table and message)
+#Customer with mainStatus is POTENTIAL (To view on Customer Care Table and message)
 customer.care.days-ago-case2 = 1
 
 # Email birthday configuarion
