--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -45,7 +45,7 @@ customer.care.max-care-days-new-case1 = 2
 # Maximum days to take care of customers with mainStatus is POTENTIAL and                                                                    
 customer.care.max-care-days-potential-case1 = 3
 
-#Customer with mainStatus is POTENTIAL (To view on Customer Care Table and message)
+# Customer with mainStatus is POTENTIAL (To view on Customer Care Table and message)
 customer.care.days-ago-case2 = 1
 
 # Email birthday configuarion
@@ -56,6 +56,16 @@ email.birthday.template=emailBirthdayTemplate1
 customer.main-status = New,Potential,Converted,Leave,Back
 logging.level.root=INFO
 logging.level.com.yourpackage=DEBUG
+
+# Firebase service account
+# firebase.service.account.path = WEB-INF/mks-crm-23326-firebase-adminsdk-fbsvc-33cf8309fd.json
+# firebase.storage.bucket = mks-crm-23326.appspot.com
+
+# Cloudinary
+cloudinary.cloud_name=diyryzowr
+cloudinary.api_key=559224277982273
+cloudinary.api_secret=Pxb76y7ne6DNjMvK2OnmGRzsNxI
+
 
 productList.colHeaders=ID, Ma don hang, Ngay giao, Loai hang hoa, Thong tin nguoi gui, Phuong tien van chuyen, Thao tac
 productList.colWidths=10, 100, 100, 100, 100, 100, 150
