Add reminder for mainStatus: New and interaction is NOT NULL.

--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -51,7 +51,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 
 # Customer Care Configuration
-# Customer with mainStatus is NEW (To view on Customer Care Table and message)
+# Each customer with mainStatus is NEW (To view on Customer Care Table and message)
 customer.care.days-ago-case1 = 2 
 
 # Maximum days to take care of customers with mainStatus is NEW and their interaction is null                                                                        
@@ -60,8 +60,11 @@ customer.care.max-care-days-new-case1 = 2
 # Maximum days to take care of customers with mainStatus is POTENTIAL and                                                                    
 customer.care.max-care-days-potential-case1 = 3
 
-# Customer with mainStatus is POTENTIAL (To view on Customer Care Table and message)
+# Each customer with mainStatus is POTENTIAL (To view on Customer Care Table and message)
 customer.care.days-ago-case2 = 1
+
+# Each customer with mainStatus is NEW and their interaction is NOT NULL (To view on Customer Care Table and message)
+customer.care.days-ago-case3 = 2
 
 # Email birthday configuarion
 email.birthday.subject=CHUC MUNG SINH NHAT
