Create entity Task.

--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -54,7 +54,7 @@ spring.mail.default-encoding=UTF-8
 # Each customer with mainStatus is NEW (To view on Customer Care Table and message)
 customer.care.days-ago-case1 = 2 
 
-# Maximum days to take care of customers with mainStatus is NEW and their interaction is null                                                                        
+# Maximum days to take care of customers with mainStatus is NEW and their interaction is null/ not null                                                                      
 customer.care.max-care-days-new-case1 = 2
 
 # Maximum days to take care of customers with mainStatus is POTENTIAL and                                                                    
