Add remindDate, dueDate, remind for Task entity and view on screen (with data).

--- a/web/src/main/webapp/WEB-INF/app-config.properties
+++ b/web/src/main/webapp/WEB-INF/app-config.properties
@@ -72,8 +72,8 @@ email.birthday.template=emailBirthdayTemplate1
 
 # Main-status = Moi, Tiem nang, Chot, Roi di, Quay lai
 customer.main-status = New,Potential,Converted,Leave,Back
-logging.level.root=INFO
-logging.level.com.yourpackage=DEBUG
+#logging.level.root=INFO
+#logging.level.com.yourpackage=DEBUG
 
 # Firebase service account
 # firebase.service.account.path = WEB-INF/mks-crm-23326-firebase-adminsdk-fbsvc-33cf8309fd.json
